@@ -93,7 +93,7 @@ public class AutomaticModules extends ModuleTestBase {
                           "package impl; public class Impl { public void e(api.Api api) { api.actionPerformed(null); } }");
 
         new JavacTask(tb)
-                .options("-modulesourcepath", moduleSrc.toString(), "-modulepath", modulePath.toString())
+                .options("--module-source-path", moduleSrc.toString(), "--module-path", modulePath.toString())
                 .outdir(classes)
                 .files(findJavaFiles(moduleSrc))
                 .run()
@@ -151,7 +151,7 @@ public class AutomaticModules extends ModuleTestBase {
                           "package impl; public class Impl { public void e(api.Api api) { api.run(\"\"); } }");
 
         new JavacTask(tb)
-                .options("-modulesourcepath", moduleSrc.toString(), "-modulepath", modulePath.toString(), "-classpath", baseJar.toString())
+                .options("--module-source-path", moduleSrc.toString(), "--module-path", modulePath.toString(), "--class-path", baseJar.toString())
                 .outdir(classes)
                 .files(findJavaFiles(moduleSrc))
                 .run()
@@ -197,7 +197,7 @@ public class AutomaticModules extends ModuleTestBase {
                           "package dep; public class Dep { api.Api api; }");
 
         new JavacTask(tb)
-                .options("-modulepath", modulePath.toString())
+                .options("--module-path", modulePath.toString())
                 .outdir(depClasses)
                 .files(findJavaFiles(depSrc))
                 .run()
@@ -221,7 +221,7 @@ public class AutomaticModules extends ModuleTestBase {
                           "package test; public class Test { }");
 
         new JavacTask(tb)
-                .options("-modulepath", modulePath.toString())
+                .options("--module-path", modulePath.toString())
                 .outdir(testClasses)
                 .files(findJavaFiles(testSrc))
                 .run()
@@ -273,9 +273,9 @@ public class AutomaticModules extends ModuleTestBase {
         Files.createDirectories(classes);
 
         List<String> log = new JavacTask(tb)
-                .options("-modulesourcepath", moduleSrc.toString(),
-                         "-modulepath", modulePath.toString(),
-                         "-addmods", "automaticB",
+                .options("--module-source-path", moduleSrc.toString(),
+                         "--module-path", modulePath.toString(),
+                         "--add-modules", "automaticB",
                          "-XDrawDiagnostics")
                 .outdir(classes)
                 .files(findJavaFiles(moduleSrc))
@@ -291,8 +291,8 @@ public class AutomaticModules extends ModuleTestBase {
         }
 
         log = new JavacTask(tb)
-                .options("-modulesourcepath", moduleSrc.toString(),
-                         "-modulepath", modulePath.toString(),
+                .options("--module-source-path", moduleSrc.toString(),
+                         "--module-path", modulePath.toString(),
                          "-XDrawDiagnostics")
                 .outdir(classes)
                 .files(findJavaFiles(moduleSrc))
